Install Laravel Dusk for browser testing Nuxt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,7 +129,16 @@ services:
       - postgres
       - redis
       - mailhog
+      - selenium
     tty: true
+
+  ### Selenium for testing browser behaviour ######
+  selenium:
+    build:
+      context: docker/selenium
+      dockerfile: Dockerfile
+    links:
+      - nginx
 
 ######### Volumes ###################################
 
