--- a/api/composer.json
+++ b/api/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "nevadskiy/tokens": "dev-master",
         "predis/predis": "^1.1"
     },
     "require-dev": {
@@ -58,5 +59,14 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/nevadskiy/tokens",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
