--- a/api/packages/nevadskiy/tokens/composer.json
+++ b/api/packages/nevadskiy/tokens/composer.json
@@ -1,13 +1,14 @@
 {
     "name": "nevadskiy/tokens",
     "description": "Easy tokens management for Laravel",
+    "keywords": [
+        "laravel",
+        "tokens",
+        "token"
+    ],
     "license": "MIT",
-    "minimum-stability": "dev",
-    "scripts": {
-        "test": [
-            "./vendor/bin/phpunit --order-by=defects"
-        ]
-    },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Nevadskiy\\Tokens\\": "src/"
@@ -19,7 +20,10 @@
         }
     },
     "require": {
-        "php": "^7.2"
+        "php": "^7.2",
+        "laravel/framework": "~5.8.0|^6.0|^7.0",
+        "nesbot/carbon": "^2.0",
+        "hashids/hashids": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
