Update docker environment

--- a/docker/dev/nginx/default.conf
+++ b/docker/dev/nginx/default.conf
@@ -2,12 +2,6 @@
 # Nuxt.JS server configuration
 #--------------------------------------------------------
 
-map $sent_http_content_type $expires {
-    "text/html"                 epoch;
-    "text/html; charset=utf-8"  epoch;
-    default                     off;
-}
-
 server {
     listen 80;
 
@@ -17,16 +11,7 @@ server {
 
     charset utf-8;
 
-    gzip            on;
-    gzip_types      text/plain application/xml text/css application/javascript;
-    gzip_min_length 1000;
-
     location / {
-        # Proxy to Node.JS instance
-        proxy_pass http://node:3000;
-
-        expires $expires;
-
         proxy_redirect                      off;
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
@@ -40,17 +25,22 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+
+        # Proxy to Node.JS instance
+        proxy_pass http://node:3000;
     }
 
     # Proxy all API requests
-    location /api {
+    location ~ ^/(api|storage)/ {
         proxy_pass http://nginx:81;
     }
 }
 
+
 #--------------------------------------------------------
 # Laravel server configuration
 #--------------------------------------------------------
+
 server {
     #listen 443 ssl;
     listen 81;
@@ -78,7 +68,7 @@ server {
     # via factcgi PHP-FPM unix socket
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass php:9000;
         fastcgi_index index.php;
         # For comfortable debugging
         fastcgi_read_timeout 1000;
