--- a/docker/dev/node/Dockerfile
+++ b/docker/dev/node/Dockerfile
@@ -4,6 +4,8 @@ FROM node:12.4-alpine
 # Set up work directory
 WORKDIR /var/www/client
 
+# Configure port
 ENV HOST 0.0.0.0
 
+# Init command
 CMD ["sh", "-c", "yarn install && yarn dev"]
