--- a/api/modules/auth/composer.json
+++ b/api/modules/auth/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "^7.2",
         "laravel/framework": "^6.2",
-        "nevadskiy/tokens": "dev-master"
+        "nevadskiy/tokens": "^1.0"
     },
     "autoload": {
         "psr-4": {
